--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Github Tests
 
-on: [push, pull_requests]
+on: [push]
 
 jobs:
     build-and-tests:
@@ -27,4 +27,4 @@ jobs:
               run: make lint
 
             - name: Run Tests
-              run: make test              
+              run: make test
