--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,31 @@
-name: Github Tests
+name: Continuous Integration
 
 on: [push]
 
 jobs:
-    build-and-tests:
-        runs-on: ubuntu-latests
-        
-        steps:
-            - uses: actions/checkout@v2
-            
-            - name: Setup Node.js
-              uses: actions/setup-node@v2
-              with:
-                node-version: '18'
-                
-            - name: Install Make
-              run: sudo apt-get install make
-              
-            - name: Install Dependencies
-              run: make Install
-              
-            - name: Build Project
-              run: make build
+  build-and-test:
+    runs-on: ubuntu-latest
 
-            - name: Run Lint
-              run: make lint
+    steps:
+    - uses: actions/checkout@v2
 
-            - name: Run Tests
-              run: make test
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'
+
+    - name: Install Make
+      run: sudo apt-get install make
+
+    - name: Install Dependencies
+      run: make install
+
+    - name: Build Project
+      run: make build
+
+    - name: Run Tests
+      run: make test
+
+    - name: Run Linter
+      run: make lint
+
